Enhance file download capability